fix(css): Correct thumbnail image align in edition mode (refs #5071)

--- a/Zone/Fdl/editdoc.css
+++ b/Zone/Fdl/editdoc.css
@@ -16,7 +16,7 @@ img.edit-image {
 div.edit-image {
     display:inline-block;
     [IF ISIE6]display:inline;[ENDIF ISIE6]
-    vertical-align: bottom;
+    vertical-align: middle;
     width:2em;
     height: 1.6em;
     position:relative;
